[package]
name = "spp-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spp_program"

[features]
no-entrypoint = []
default = []
lib = []

[dependencies]
bincode = "1.3.3"
borsh = "1.4.0"
bytemuck = "1.4.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
safe-transmute = "0.11.0"
solana-program = "=2.0.14"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-token = { version = "^6.0", features = ["no-entrypoint"] }
thiserror = "1.0.63"
